:fire: remove inicialização de dados - reformula método de criação do administrador